feat(relay): Story 2.2 CR — 3-layer adversarial review + 7 patches + 8 defers/5 dismisses; story → done
Full-story review of diff b7927b2..HEAD (59 files, +9,605/-33): Blind
Hunter + Edge Case Hunter + Acceptance Auditor, fresh-context in
parallel; 28 raw -> 21 deduped findings adversarially re-verified by 5
independent verifiers (CONFIRM/PARTIAL/REFUTE + tracked-where audit;
the one raw HIGH — runtime pair cap — fell to PARTIAL: owner-deferred
to Epic 3). Deferred-work RESOLVED spot-check: no false-RESOLVED — all
3 markers backed by cited biting tests. AC scoreboard: AC1/2/4/5/6/7/8
SATISFIED; AC3/AC9 PARTIAL (AC3 = zero relay logging, ratified Epic-4
deferral AD-19/AD-33; AC9 = RUN-half preview gate, now ledgered).

Patches applied same-day (owner decisions 2026-08-17):

* F12 null-returning verify() NPE'd outside the try and leaked the
  pooled bind frame — null arm mirrors the adjacent catch verbatim
  (release + denyAndTeardown + zeroize; AD-11 fail-closed, no
  onBindReject per AD-27); pinned by
  nullReturningVerifierFailsClosedAndReleasesTheFrame (deny code +
  empty rejects + closed + registry empty + zeroized + refCnt == 0).
* F17 A1CarrierPlanDocsTest read ../docs/a-1-carrier-test-plan.md off
  the build graph — docs-only edits left `test` UP-TO-DATE and silently
  skipped the OBS-035/036/037 gate; now a declared test input.
* F6 NoStringFromPasswordTest promoted PROXY_RELAY to a hard existence
  assert (relay landed at T7/T8) and dropped the soft-skip `continue`.
* F21 RelayChannelOptions javadoc overclaimed "at most
  max-inbound-depth frames" — reworded to the actual steady-state bound
  (high mark + one read cycle; read() under AUTO_READ=false is an
  idempotent interest-arm).
* F3 dated amendment notes at story :217/:359 ("ZERO new config field"
  held for T6 only; T5b budget-check + T7 adjudicationDeadline were
  sanctioned additions).
* F4 File List now records the T4 io.freefair.lombok 9.5.0 plugin
  addition (T4 + T10).
* F13-doc deferred-work wi